Removed debug console calls. Tweaked UI.

--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<label for="vent-venter">Venter</label>
+											<label for="vent-venter">Vents</label>
 											<select class="form-control" id="vent-venter" data-bind="options: getFieldCandidates('vent_venter'), optionsText: App.Application.renderTeammateNameVentVenter, value: getFieldObservable('vent_venter')"></select>
 										</div>
 										<div class="form-group">
@@ -142,7 +142,7 @@
 								<div class="row">
 									<div class="col-md-6">
 										<div class="form-group">
-											<label for="long-walk-bubbler">Bubbler</label>
+											<label for="long-walk-bubbler">Biotic Bubble</label>
 											<select class="form-control" id="long-walk-bubbler" data-bind="options: getFieldCandidates('long_walk_bubbler'), optionsText: App.Application.renderTeammateNameLongWalkBubbler, value: getFieldObservable('long_walk_bubbler')"></select>
 										</div>
 										<div class="form-group">
