--- a/public/index.html
+++ b/public/index.html
@@ -96,13 +96,13 @@
 						<!-- ko if: id === App.ME2.Stages.StageIDs.Occulus -->
 							<form role="form">
 								<div class="row">
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="occulus-squadmate-1">Squadmate #1</label>
 											<select class="form-control" id="occulus-squadmate-1" data-bind="options: getFieldCandidates('occulus_squadmate_1'), optionsText: App.Application.renderTeammateName, value: getFieldObservable('occulus_squadmate_1')"></select>
 										</div>
 									</div>
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="occulus-squadmate-2">Squadmate #2</label>
 											<select class="form-control" id="occulus-squadmate-2" data-bind="options: getFieldCandidates('occulus_squadmate_2'), optionsText: App.Application.renderTeammateName, value: getFieldObservable('occulus_squadmate_2')"></select>
@@ -114,7 +114,7 @@
 						<!-- ko if: id === App.ME2.Stages.StageIDs.Vents -->
 							<form role="form">
 								<div class="row">
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="vent-venter">Vents</label>
 											<select class="form-control" id="vent-venter" data-bind="options: getFieldCandidates('vent_venter'), optionsText: App.Application.renderTeammateNameVentVenter, value: getFieldObservable('vent_venter')"></select>
@@ -124,7 +124,7 @@
 											<select class="form-control" id="vent-leader" data-bind="options: getFieldCandidates('vent_leader'), optionsText: App.Application.renderTeammateNameVentLeader, value: getFieldObservable('vent_leader')"></select>
 										</div>
 									</div>
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="vent-squadmate-1">Squadmate #1</label>
 											<select class="form-control" id="vent-squadmate-1" data-bind="options: getFieldCandidates('vent_squadmate_1'), optionsText: App.Application.renderTeammateName, value: getFieldObservable('vent_squadmate_1')"></select>
@@ -140,7 +140,7 @@
 						<!-- ko if: id === App.ME2.Stages.StageIDs.LongWalk -->
 							<form role="form">
 								<div class="row">
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="long-walk-bubbler">Biotic Bubble</label>
 											<select class="form-control" id="long-walk-bubbler" data-bind="options: getFieldCandidates('long_walk_bubbler'), optionsText: App.Application.renderTeammateNameLongWalkBubbler, value: getFieldObservable('long_walk_bubbler')"></select>
@@ -154,7 +154,7 @@
 											<select class="form-control" id="long-walk-escort" data-bind="options: getFieldCandidates('long_walk_escort'), optionsText: App.Application.renderTeammateNameLongWalkEscort, value: getFieldObservable('long_walk_escort')"></select>
 										</div>
 									</div>
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="long-walk-squadmate-1">Squadmate #1</label>
 											<select class="form-control" id="long-walk-squadmate-1" data-bind="options: getFieldCandidates('long_walk_squadmate_1'), optionsText: App.Application.renderTeammateName, value: getFieldObservable('long_walk_squadmate_1')"></select>
@@ -170,13 +170,13 @@
 						<!-- ko if: id == App.ME2.Stages.StageIDs.Boss -->
 							<form role="form">
 								<div class="row">
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="boss-squadmate-1">Squadmate #1</label>
 											<select class="form-control" id="boss-squadmate-1" data-bind="options: getFieldCandidates('boss_squadmate_1'), optionsText: App.Application.renderTeammateNameBossSquadmate, value: getFieldObservable('boss_squadmate_1')"></select>
 										</div>
 									</div>
-									<div class="col-md-6">
+									<div class="col-sm-6">
 										<div class="form-group">
 											<label for="boss-squadmate-2">Squadmate #2</label>
 											<select class="form-control" id="boss-squadmate-2" data-bind="options: getFieldCandidates('boss_squadmate_2'), optionsText: App.Application.renderTeammateNameBossSquadmate, value: getFieldObservable('boss_squadmate_2')"></select>
@@ -233,81 +233,86 @@
 						<!-- /ko -->
 					<!-- /ko -->
 
-					<table class="table table-rounded table-striped summary-table table-hover" data-bind="visible: $root.state.stage().id !== App.ME2.Stages.StageIDs.Setup">
-						<thead>
-							<tr>
-								<th>Teammates</th>
-								<th>Death</th>
-								<th>Occulus</th>
-								<th>Vents</th>
-								<th>Long Walk</th>
-								<th>Boss</th>
-							</tr>
-						</thead>
-						<tbody>
-							<!-- ko with: $root.state.teammates().sortByIsRecruited().value() -->
-								<!-- ko foreach: $data -->
-									<tr data-bind="attr: { class: (is_recruited() ? '' : 'text-warning warning') }, click: function () { $root.henchman(henchman) }">
-										<td data-bind="attr: { class: (is_dead() ? 'danger' : '') }">
-											<span data-bind="text: henchman.name"></span> <!-- ko if: is_loyal() --><span class="glyphicon glyphicon-heart"></span><!-- /ko -->
-										</td>
-										<td data-bind="attr: { class: (is_dead() ? 'danger' : '') }">
-											<!-- ko if: is_dead() -->
-												<span data-bind="text: App.Application.renderTeammateDeathCause(death_cause())"></span>
-											<!-- /ko -->
-										</td>
-										<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.Occulus ? 'danger' : '') }">
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.OcculusSquadmate) -->
-												<span class="glyphicon glyphicon-user"></span>
-											<!-- /ko -->
-										</td>
-										<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.Vents ? 'danger' : '') }">
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.VentsSquadmate) -->
-												<span class="glyphicon glyphicon-user"></span>
-											<!-- /ko -->
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.VentsVenter) -->
-												<span class="glyphicon glyphicon-star"></span>
-											<!-- /ko -->
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.VentsLeader) -->
-												<span class="glyphicon glyphicon-fire"></span>
-											<!-- /ko -->
-										</td>
-										<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.LongWalk ? 'danger' : '') }">
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkSquadmate) -->
-												<span class="glyphicon glyphicon-user"></span>
-											<!-- /ko -->
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkBubbler) -->
-												<span class="glyphicon glyphicon-star"></span>
-											<!-- /ko -->
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkLeader) -->
-												<span class="glyphicon glyphicon-fire"></span>
-											<!-- /ko -->
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkEscort) -->
-												<span class="glyphicon glyphicon-heart-empty"></span>
-											<!-- /ko -->
-										</td>
-										<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.Boss ? 'danger' : '') }">
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.BossSquadmate) -->
-												<span class="glyphicon glyphicon-user"></span>
-											<!-- /ko -->
-											<!-- ko if: hasRole(App.ME2.TeammateRoles.HeldTheLine) -->
-												<span class="glyphicon glyphicon-flash"></span>
-											<!-- /ko -->
-										</td>
-									</tr>
+					<div class="table-responsive">
+						<table class="table table-rounded table-striped summary-table table-hover table-condensed" data-bind="visible: $root.state.stage().id !== App.ME2.Stages.StageIDs.Setup">
+							<thead>
+								<tr>
+									<th>Teammates</th>
+									<th class="hidden-xs">Death</th>
+									<th><span class="visible-xs-inline">O</span><span class="hidden-xs">Occulus</span></th>
+									<th><span class="visible-xs-inline">V</span><span class="hidden-xs">Vents</span></th>
+									<th><span class="visible-xs-inline">LW</span><span class="hidden-xs">Long Walk</span></th>
+									<th><span class="visible-xs-inline">B</span><span class="hidden-xs">Boss</span></th>
+								</tr>
+							</thead>
+							<tbody>
+								<!-- ko with: $root.state.teammates().sortByIsRecruited().value() -->
+									<!-- ko foreach: $data -->
+										<tr data-bind="attr: { class: (is_recruited() ? '' : 'text-warning warning') }, click: function () { $root.henchman(henchman) }">
+											<td data-bind="attr: { class: (is_dead() ? 'danger' : '') }">
+												<span data-bind="text: henchman.name"></span> <!-- ko if: is_loyal() --><span class="glyphicon glyphicon-heart"></span><!-- /ko -->
+											</td>
+											<td data-bind="attr: { class: (is_dead() ? 'danger hidden-xs' : 'hidden-xs') }">
+												<!-- ko if: is_dead() -->
+													<span data-bind="text: App.Application.renderTeammateDeathCause(death_cause())"></span>
+												<!-- /ko -->
+											</td>
+											<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.Occulus ? 'danger' : '') }">
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.OcculusSquadmate) -->
+													<span class="glyphicon glyphicon-user"></span>
+												<!-- /ko -->
+											</td>
+											<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.Vents ? 'danger' : '') }">
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.VentsSquadmate) -->
+													<span class="glyphicon glyphicon-user"></span>
+												<!-- /ko -->
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.VentsVenter) -->
+													<span class="glyphicon glyphicon-star"></span>
+												<!-- /ko -->
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.VentsLeader) -->
+													<span class="glyphicon glyphicon-fire"></span>
+												<!-- /ko -->
+											</td>
+											<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.LongWalk ? 'danger' : '') }">
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkSquadmate) -->
+													<span class="glyphicon glyphicon-user"></span>
+												<!-- /ko -->
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkBubbler) -->
+													<span class="glyphicon glyphicon-star"></span>
+												<!-- /ko -->
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkLeader) -->
+													<span class="glyphicon glyphicon-fire"></span>
+												<!-- /ko -->
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.LongWalkEscort) -->
+													<span class="glyphicon glyphicon-heart-empty"></span>
+												<!-- /ko -->
+											</td>
+											<td data-bind="attr: { class: (is_dead() && death_stage_id() === App.ME2.Stages.StageIDs.Boss ? 'danger' : '') }">
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.BossSquadmate) -->
+													<span class="glyphicon glyphicon-user"></span>
+												<!-- /ko -->
+												<!-- ko if: hasRole(App.ME2.TeammateRoles.HeldTheLine) -->
+													<span class="glyphicon glyphicon-flash"></span>
+												<!-- /ko -->
+											</td>
+										</tr>
+									<!-- /ko -->
 								<!-- /ko -->
-							<!-- /ko -->
-						</tbody>
-					</table>
+							</tbody>
+						</table>
+					</div>
 				</div>
 				<div class="panel-footer">
 					<!-- ko with: $root.state.stage -->
 						<div class="row">
-							<div class="col-xs-6">
-								<button class="btn btn-default btn-block" data-bind="enable: $root.stager.can_go_back, click: function () { $root.stager.back() }">Previous</button>
+							<div class="col-xs-4">
+								<button class="btn btn-default btn-block" data-bind="enable: $root.stager.can_go_back, click: function () { $root.stager.back() }">Back</button>
 							</div>
-							<div class="col-xs-6">
-								<button class="" data-bind="enable: is_evaluatable, attr: { 'class': (is_evaluatable() ? 'btn btn-success btn-block' : 'btn btn-default btn-block') }, click: function () { $root.stager.nextStage() }">Next</button>
+							<div class="col-xs-4">
+								<button class="btn btn-warning btn-block" data-bind="click: function () { $root.stager.reset() }">Reset</button>
+							</div>
+							<div class="col-xs-4">
+								<button class="" data-bind="enable: is_evaluatable, attr: { 'class': (is_evaluatable() ? 'btn btn-success btn-block' : 'btn btn-default btn-block') }, click: function () { $root.stager.next() }">Next</button>
 							</div>
 						</div>
 						<div class="row">
@@ -372,7 +377,7 @@
 								<fieldset>
 									<legend>Attributes</legend>
 									<div class="row">
-										<div class="col-md-6">
+										<div class="col-xs-6">
 											<div class="form-group">
 												<label class="col-sm-8 control-label">Tech Expert</label>
 												<div class="col-sm-4">
@@ -386,7 +391,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-6">
+										<div class="col-xs-6">
 											<div class="form-group">
 												<label class="col-sm-8 control-label">Fireteam Leader</label>
 												<div class="col-sm-4">
@@ -405,7 +410,7 @@
 								<fieldset>
 									<legend>Eligibility for Roles</legend>
 									<div class="row">
-										<div class="col-md-6">
+										<div class="col-xs-6">
 											<div class="form-group">
 												<label class="col-sm-8 control-label">Vents</label>
 												<div class="col-sm-4">
@@ -419,7 +424,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-6">
+										<div class="col-xs-6">
 											<div class="form-group">
 												<label class="col-sm-8 control-label">Leader</label>
 												<div class="col-sm-4">
@@ -438,7 +443,7 @@
 								<fieldset>
 									<legend>Priority</legend>
 									<div class="row">
-										<div class="col-md-6">
+										<div class="col-xs-6">
 											<div class="form-group">
 												<label class="col-sm-8 control-label"><a tabindex="0" data-bind="click: App.Application.showArmourDeathRankPopover">Armour Death</a></label>
 												<div class="col-sm-4">
@@ -470,7 +475,7 @@
 												</div>
 											</div>
 										</div>
-										<div class="col-md-6">
+										<div class="col-xs-6">
 											<div class="form-group">
 												<label class="col-sm-8 control-label"><a tabindex="5" data-bind="click: App.Application.showDefenceReportRankPopover">Defence Report</a></label>
 												<div class="col-sm-4">
