Added support for dynamically assigning roles as they are selected in the dropdowns.

--- a/public/index.html
+++ b/public/index.html
@@ -188,7 +188,7 @@
 						<!-- ko if: id === App.ME2.Stages.StageIDs.Summary -->
 							<form role="form">
 								<div class="row">
-									<div class="col-md-4">
+									<div class="col-md-4 col-sm-6">
 										<div class="form-group">
 											<label>Reports on defence</label>
 											<p class="form-control-static" data-bind="text: App.Application.renderTeammateName(defence_reporter())"></p>
@@ -202,7 +202,7 @@
 											<p class="form-control-static" data-bind="text: App.Application.renderTeammateName(destroy_base_advocate())"></p>
 										</div>
 									</div>
-									<div class="col-md-4">
+									<div class="col-md-4 col-sm-6">
 										<div class="form-group">
 											<label>Shepard lives</label>
 											<p class="form-control-static" data-bind="text: App.Application.renderYesNo(shepard_lives())"></p>
@@ -216,7 +216,7 @@
 											<p class="form-control-static" data-bind="text: App.Application.renderCrewSurvival(crew_survival())"></p>
 										</div>
 									</div>
-									<div class="col-md-4">
+									<div class="col-md-4 col-sm-12">
 										<div class="form-group">
 											<label>Hold the line score</label>
 											<p class="form-control-static">
