--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,331 @@
 	<body>
 		<div id="app" class="container">
 			<div class="panel panel-default">
+				<div class="panel-body" data-bind="with: logic">
+					<form>
+						<fieldset>
+							<legend>Setup</legend>
+							<table class="table table-rounded table-striped setup-table table-condensed">
+								<thead>
+									<tr>
+										<th></th>
+										<th>
+											<div class="checkbox">
+												<label><input type="checkbox" data-bind="checked: all_recruited" /> Recruited</label>
+											</div>
+										</th>
+										<th>
+											<div class="checkbox">
+												<label><input type="checkbox" data-bind="checked: all_loyal" /> Loyal</label>
+											</div>
+										</th>
+										<th>Approach</th>
+										<th>Vents</th>
+										<th>Long Walk</th>
+										<th>Boss</th>
+										<th>Outcome</th>
+									</tr>
+								</thead>
+								<tbody>
+								<!-- ko foreach: {data: pool, as: 'teammate'} -->
+									<tr data-bind="css: {'text-muted': !is_recruited() }">
+										<td>
+											<div class="checkbox">
+												<label>
+												<a href="#view-profile" data-bind="click: function () { }">
+													<span data-bind="text: teammate.name"></span>
+													<!-- ko if: teammate.is_loyal() --><span class="glyphicon glyphicon-heart"></span><!-- /ko -->
+												</a>
+												</label>
+											</div>
+										</td>
+										<td>
+											<div class="checkbox">
+												<label>
+													<input type="checkbox" data-bind="attr: { 'disabled': (teammate.is_essential ? 'disabled' : undefined) }, checked: is_recruited" /> &nbsp;
+												</label>
+											</div>
+										</td>
+										<td>
+											<div class="checkbox">
+												<label>
+													<input type="checkbox" data-bind="attr: { 'disabled': (is_recruited() ? undefined : 'disabled') }, checked: is_loyal" /> &nbsp;
+												</label>
+											</div>
+										</td>
+										<td>
+											<!-- ko if: teammate.hasRole(Role.ApproachSquadmate1) -->
+												<span class="glyphicon glyphicon-user"></span><sup>1</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.ApproachSquadmate2) -->
+												<span class="glyphicon glyphicon-user"></span><sup>2</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.ApproachShieldsDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Shield</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.ApproachArmorDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Armour</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.ApproachWeaponDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Weapon</sup>
+											<!-- /ko -->
+										</td>
+										<td>
+											<!-- ko if: teammate.hasRole(Role.VentsSquadmate1) -->
+												<span class="glyphicon glyphicon-user"></span><sup>1</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.VentsSquadmate2) -->
+												<span class="glyphicon glyphicon-user"></span><sup>2</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.VentsSpecialist) -->
+												<span class="glyphicon glyphicon-star"></span>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.VentsFireteamLeader) -->
+												<span class="glyphicon glyphicon-fire"></span>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.VentsDeath) -->
+												<span class="glyphicon glyphicon-alert"></span>
+											<!-- /ko -->
+										</td>
+										<td>
+											<!-- ko if: teammate.hasRole(Role.LongWalkSquadmate1) -->
+												<span class="glyphicon glyphicon-user"></span><sup>1</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkSquadmate2) -->
+												<span class="glyphicon glyphicon-user"></span><sup>2</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkSpecialist) -->
+												<span class="glyphicon glyphicon-star"></span>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkFireteamLeader) -->
+												<span class="glyphicon glyphicon-fire"></span>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkEscort) -->
+												<span class="glyphicon glyphicon-heart-empty"></span>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkSquadmateDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Squad</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkEscortDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Escort</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.LongWalkFireteamLeaderDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Leader</sup>
+											<!-- /ko -->
+										</td>
+										<td>
+											<!-- ko if: teammate.hasRole(Role.BossSquadmate1) -->
+												<span class="glyphicon glyphicon-user"></span><sup>1</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.BossSquadmate2) -->
+												<span class="glyphicon glyphicon-user"></span><sup>2</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.BossHoldingTheLine) -->
+												<span class="glyphicon glyphicon-flash"></span>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.BossSquadmateDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>Squad</sup>
+											<!-- /ko -->
+											<!-- ko if: teammate.hasRole(Role.BossHoldingTheLineDeath) -->
+												<span class="glyphicon glyphicon-alert"></span><sup>HTL</sup>
+											<!-- /ko -->
+										</td>
+										<td>
+										</td>
+									</tr>
+								<!-- /ko -->
+								</tbody>
+							</table>
+							<div class="row">
+								<div class="col-md-3">
+										<div class="form-group">
+											<div class="checkbox">
+												<label><input type="checkbox" data-bind="checked: normandy_has_armour" /> <span data-placement="right" data-toggle="tooltip" data-html="true" title="Provided by <em>Jacob Taylor</em>">Has Armour upgrade?</span></label>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-3">
+										<div class="form-group">
+											<div class="checkbox">
+												<label><input type="checkbox" data-bind="checked: normandy_has_shields" /> <span data-placement="right" data-toggle="tooltip" data-html="true" title="Provided by <em>Tali'zorah</em>">Has Shielding upgrade?</span></label>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-3">
+										<div class="form-group">
+											<div class="checkbox">
+												<label><input type="checkbox" data-bind="checked: normandy_has_weapon" /> <span data-placement="right" data-toggle="tooltip" data-html="true" title="Provided by <em>Garrus Vakarian</em>">Has Thanix Cannon?</span></label>
+											</div>
+										</div>
+									</form>
+								</div>
+							</div>
+						</fieldset>
+						<fieldset>
+							<legend>Approach</legend>
+							<div class="row">
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: approach_squadmate_1,
+										pool: approach_squadmate_pool_1,
+										label: "Squadmate #1",
+										id: "approach-squadmate-1"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: approach_squadmate_2,
+										pool: approach_squadmate_pool_2,
+										label: "Squadmate #2",
+										id: "approach-squadmate-2"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<!-- ko component: { name: "teammate-list", params: {
+										pool: approach_survivors,
+										label: "Survivors"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+						</fieldset>
+						<fieldset>
+							<legend>Vents</legend>
+							<div class="row">
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: vents_specialist,
+										pool: vents_specialist_pool,
+										label: "Specialist",
+										id: "vents-specialist"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: vents_fireteam_leader,
+										pool: vents_fireteam_leader_pool,
+										label: "Fireteam Leader",
+										id: "vents-fireteam-leader"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: vents_squadmate_1,
+										pool: vents_squadmate_pool_1,
+										label: "Squadmate #1",
+										id: "vents-squadmate-1"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: vents_squadmate_2,
+										pool: vents_squadmate_pool_2,
+										label: "Squadmate #2",
+										id: "vents-squadmate-2"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<!-- ko component: { name: "teammate-list", params: {
+										pool: vents_survivors,
+										label: "Survivors"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+						</fieldset>
+						<fieldset>
+							<legend>Long Walk</legend>
+							<div class="row">
+								<div class="col-md-4">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: long_walk_specialist,
+										pool: long_walk_specialist_pool,
+										label: "Specialist",
+										id: "long-walk-specialist"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-4">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: long_walk_fireteam_leader,
+										pool: long_walk_fireteam_leader_pool,
+										label: "Fireteam Leader",
+										id: "long-walk-fireteam-leader"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-4">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: long_walk_escort,
+										pool: long_walk_escort_pool,
+										label: "Escort",
+										id: "long-walk-escort"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: long_walk_squadmate_1,
+										pool: long_walk_squadmate_pool_1,
+										label: "Squadmate #1",
+										id: "long-walk-squadmate-1"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: long_walk_squadmate_2,
+										pool: long_walk_squadmate_pool_2,
+										label: "Squadmate #2",
+										id: "long-walk-squadmate-2"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<!-- ko component: { name: "teammate-list", params: {
+										pool: long_walk_survivors,
+										label: "Survivors"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+						</fieldset>
+						<fieldset>
+							<legend>Boss / Hold the Line</legend>
+							<div class="row">
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: boss_squadmate_1,
+										pool: boss_squadmate_pool_1,
+										label: "Squadmate #1",
+										id: "boss-squadmate-1"
+									} } --><!-- /ko -->
+								</div>
+								<div class="col-md-6">
+									<!-- ko component: { name: 'pick-teammate', params: {
+										target: boss_squadmate_2,
+										pool: boss_squadmate_pool_2,
+										label: "Squadmate #2",
+										id: "boss-squadmate-2"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+							<div class="row">
+								<div class="col-md-12">
+									<!-- ko component: { name: "teammate-list", params: {
+										pool: boss_survivors,
+										label: "Survivors"
+									} } --><!-- /ko -->
+								</div>
+							</div>
+						</fieldset>
+					</form>
+				</div>
+			</div>
+
+			<div class="panel panel-default">
 				<!-- ko with: $root.state.stage -->
 					<div class="panel-heading">
 						<h2 class="panel-title" data-bind="text: label"></h2>
